fix(margin): margin not aligned properly fixed

--- a/public/styles/_viewer.scss
+++ b/public/styles/_viewer.scss
@@ -202,7 +202,7 @@
   }
 
   .viewer-image {
-    margin-left: 58px;
+    margin: 0 0 0 58px;
   }
 
   .key-value-container {
