--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -374,7 +374,7 @@ footer {
   }
 
   .viewer-image {
-    margin-left: 58px;
+    margin: 0 0 0 58px;
   }
 
   .key-value-container {
